Closed Bug 876530 Opened 11 years ago Closed 11 years ago

Fix implicit conversions to already_AddRefed in Qt widget.

Categories

(Core Graveyard :: Widget: Qt, defect)

x86
Linux
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
mozilla24

People

(Reporter: tatiana, Assigned: tatiana)

Details

Attachments

(1 file)

Bug 859817 followup.

/widget/qt/nsIdleServiceQt.h: In static member function ‘static already_AddRefed<nsIdleServiceQt> nsIdleServiceQt::GetInstance()’:
widget/qt/nsIdleServiceQt.h:43:16: error: could not convert ‘idleService’ from ‘nsIdleServiceQt*’ to ‘already_AddRefed<nsIdleServiceQt>’
widget/qt/nsIdleServiceQt.h:44:5: error: control reaches end of non-void function [-Werror=return-type]
cc1plus: some warnings being treated as errors
make[6]: *** [nsWidgetFactory.o] Error 1
Attached patch patchSplinter Review
Assignee: nobody → tanya.meshkova
Status: NEW → ASSIGNED
Attachment #754608 - Flags: review?(romaxa)
Summary: Fix implicit conversions to already_AddRefed in Ot widget. → Fix implicit conversions to already_AddRefed in Qt widget.
Attachment #754608 - Flags: review?(romaxa) → review+
https://hg.mozilla.org/mozilla-central/rev/89514aca3005
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla24
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: