Bug 876530 - Fix implicit conversions to already_AddRefed in Qt widget. r=romaxa